--- a/.github/workflows/deploy-flask-app.yml
+++ b/.github/workflows/deploy-flask-app.yml
@@ -27,10 +27,10 @@ jobs:
           -H "Authorization: Bearer ${{ secrets.VULTR_API_KEY }}" \
           -H "Content-Type: application/json" \
           -d '{
-                "region": "ewr",                  # Change to your desired region
+                "region": "sea",                  # Change to your desired region
                 "plan": "vc2-1c-1gb",            # Change to your desired plan
                 "os_id": 387,                    # Ubuntu 20.04 LTS x64
-                "sshkey_id": ["your_ssh_key_id"], # Replace with your actual SSH key ID from Vultr
+                "sshkey_id": ["${{ secrets.VULTR_SSH_ID }}"], # Replace with your actual SSH key ID from Vultr
                 "label": "flask-app-server"
               }')
         echo "Response: $response"
@@ -63,6 +63,16 @@ jobs:
         apt-get update
         apt-get install -y python3-pip python3-venv
 
+        # Install Docker
+        apt-get install -y apt-transport-https ca-certificates curl software-properties-common
+        curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
+        add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+        apt-get update
+        apt-get install -y docker-ce
+        
+        # Start Docker service
+        systemctl start docker
+
         # Clone the repository
         git clone https://github.com/${{ github.repository }} app
         cd app
@@ -79,10 +89,13 @@ jobs:
         export API_ACCESS_KEY=${{ secrets.API_ACCESS_KEY }}
         export DEFAULT_OPENAI_MODEL=${{ secrets.DEFAULT_OPENAI_MODEL }}
         export DEFAULT_GEMINI_MODEL=${{ secrets.DEFAULT_GEMINI_MODEL }}
+        
+        # Run the Docker command with cloudflared
+        docker run -d -p ${{ secrets.PORT }}:${{ secrets.PORT }} cloudflare/cloudflared:latest tunnel --no-autoupdate run --token ${{ secrets.CLOUDFLARE_TUNNEL_TOKEN }}
 
         # Run the Flask application with Gunicorn
-        gunicorn -w 4 -b 0.0.0.0:5000 proxy:app --daemon
+        gunicorn -w 4 -b localhost:${{ secrets.PORT }} proxy:app --daemon
         EOF
 
     - name: Output Server IP
-      run: echo "Your Flask app is running at http://${{ env.ip_address }}:5000"
+      run: echo "Your Flask app is running at http://${{ env.ip_address }}:${{ secrets.PORT }}"
