--- a/.github/workflows/deploy-flask-app.yml
+++ b/.github/workflows/deploy-flask-app.yml
@@ -85,6 +85,7 @@ jobs:
         # Set environment variables
         export OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
         export GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}
+        export OPENAI_API_URL=${{ secrets.GEMINI_API_URL }}
         export GEMINI_API_URL=${{ secrets.GEMINI_API_URL }}
         export API_ACCESS_KEY=${{ secrets.API_ACCESS_KEY }}
         export DEFAULT_OPENAI_MODEL=${{ secrets.DEFAULT_OPENAI_MODEL }}
