--- a/.github/workflows/deploy-flask-app.yml
+++ b/.github/workflows/deploy-flask-app.yml
@@ -26,13 +26,7 @@ jobs:
         response=$(curl -s -X POST https://api.vultr.com/v2/instances \
           -H "Authorization: Bearer ${{ secrets.VULTR_API_KEY }}" \
           -H "Content-Type: application/json" \
-          -d '{
-                "region": "sea",                  # Change to your desired region
-                "plan": "vc2-1c-1gb",            # Change to your desired plan
-                "os_id": 387,                    # Ubuntu 20.04 LTS x64
-                "sshkey_id": ["${{ secrets.VULTR_SSH_ID }}"], # Replace with your actual SSH key ID from Vultr
-                "label": "flask-app-server"
-              }')
+          -d '{"region": "sea","plan": "vhp-1c-1gb-amd","os_id": 2284,"sshkey_id": ["${{ secrets.VULTR_SSH_ID }}"],"label": "flask-app-server"}')
         echo "Response: $response"
         instance_id=$(echo $response | jq -r '.instance.id')
         echo "Instance ID: $instance_id"
