fix ssh bug in action

--- a/.github/workflows/deploy-flask-app.yml
+++ b/.github/workflows/deploy-flask-app.yml
@@ -48,49 +48,58 @@ jobs:
         echo "Server IP: $ip_address"
         echo "ip_address=$ip_address" >> $GITHUB_ENV
 
-    - name: Set up and run Flask app on Vultr
-      env:
-        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+    - name: Install SSH client
       run: |
-        ssh -o StrictHostKeyChecking=no root@${{ env.ip_address }} << 'EOF'
-        # Update and install dependencies
-        apt-get update
-        apt-get install -y python3-pip python3-venv
-
-        # Install Docker
-        apt-get install -y apt-transport-https ca-certificates curl software-properties-common
-        curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
-        add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
-        apt-get update
-        apt-get install -y docker-ce
-        
-        # Start Docker service
-        systemctl start docker
-
-        # Clone the repository
-        git clone https://github.com/${{ github.repository }} app
-        cd app
-
-        # Set up virtual environment and install dependencies
-        python3 -m venv venv
-        source venv/bin/activate
-        pip install -r requirements.txt
-
-        # Set environment variables
-        export OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
-        export GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}
-        export OPENAI_API_URL=${{ secrets.GEMINI_API_URL }}
-        export GEMINI_API_URL=${{ secrets.GEMINI_API_URL }}
-        export API_ACCESS_KEY=${{ secrets.API_ACCESS_KEY }}
-        export DEFAULT_OPENAI_MODEL=${{ secrets.DEFAULT_OPENAI_MODEL }}
-        export DEFAULT_GEMINI_MODEL=${{ secrets.DEFAULT_GEMINI_MODEL }}
-        
-        # Run the Docker command with cloudflared
-        docker run -d -p ${{ secrets.PORT }}:${{ secrets.PORT }} cloudflare/cloudflared:latest tunnel --no-autoupdate run --token ${{ secrets.CLOUDFLARE_TUNNEL_TOKEN }}
-
-        # Run the Flask application with Gunicorn
-        gunicorn -w 4 -b localhost:${{ secrets.PORT }} proxy:app --daemon
-        EOF
+        sudo apt-get update
+        sudo apt-get install -y openssh-client
+  
+    - name: Set up and run Flask app on Vultr
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ env.ip_address }}
+        username: root
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        port: 22
+        script: |
+          tmux new -s llm-proxy
+          
+          # Update and install dependencies
+          apt-get update
+          apt-get install -y python3-pip python3-venv
+  
+          # Install Docker
+          apt-get install -y apt-transport-https ca-certificates curl   software-properties-common
+          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
+          add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/  ubuntu $(lsb_release -cs) stable"
+          apt-get update
+          apt-get install -y docker-ce
+          
+          # Start Docker service
+          systemctl start docker
+  
+          # Clone the repository
+          git clone https://github.com/${{ github.repository }} app
+          cd app
+  
+          # Set up virtual environment and install dependencies
+          python3 -m venv venv
+          source venv/bin/activate
+          pip install -r requirements.txt
+  
+          # Set environment variables
+          export OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
+          export GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}
+          export OPENAI_API_URL=${{ secrets.GEMINI_API_URL }}
+          export GEMINI_API_URL=${{ secrets.GEMINI_API_URL }}
+          export API_ACCESS_KEY=${{ secrets.API_ACCESS_KEY }}
+          export DEFAULT_OPENAI_MODEL=${{ secrets.DEFAULT_OPENAI_MODEL }}
+          export DEFAULT_GEMINI_MODEL=${{ secrets.DEFAULT_GEMINI_MODEL }}
+          
+          # Run the Docker command with cloudflared
+          docker run -d -p ${{ secrets.PORT }}:${{ secrets.PORT }} cloudflare/  cloudflared:latest tunnel --no-autoupdate run --token ${{ secrets.  CLOUDFLARE_TUNNEL_TOKEN }}
+  
+          # Run the Flask application with Gunicorn
+          gunicorn -w 4 -b localhost:${{ secrets.PORT }} proxy:app --daemon
 
     - name: Output Server IP
       run: echo "Your Flask app is running at http://${{ env.ip_address }}:${{ secrets.PORT }}"
