--- a/.github/workflows/deploy-flask-app.yml
+++ b/.github/workflows/deploy-flask-app.yml
@@ -42,6 +42,9 @@ jobs:
           sleep 10
         done
 
+        # Additional wait to ensure SSH readiness
+        sleep 60  # Wait 1 minute to ensure SSH service is up
+
         # Get the server's IP address
         ip_address=$(curl -s -X GET https://api.vultr.com/v2/instances/$instance_id \
           -H "Authorization: Bearer ${{ secrets.VULTR_API_KEY }}" | jq -r '.instance.main_ip')
@@ -62,7 +65,7 @@ jobs:
         port: 22
         script: |
           tmux new -s llm-proxy
-          
+
           # Update and install dependencies
           apt-get update
           apt-get install -y python3-pip python3-venv
@@ -99,7 +102,7 @@ jobs:
           docker run -d -p ${{ secrets.PORT }}:${{ secrets.PORT }} cloudflare/  cloudflared:latest tunnel --no-autoupdate run --token ${{ secrets.  CLOUDFLARE_TUNNEL_TOKEN }}
   
           # Run the Flask application with Gunicorn
-          gunicorn -w 4 -b localhost:${{ secrets.PORT }} proxy:app --daemon
+          gunicorn -w 4 -b localhost:${{ secrets.PORT }} proxy:app
 
     - name: Output Server IP
       run: echo "Your Flask app is running at http://${{ env.ip_address }}:${{ secrets.PORT }}"
