--- a/.github/workflows/deploy-flask-app.yml
+++ b/.github/workflows/deploy-flask-app.yml
@@ -48,7 +48,7 @@ jobs:
         done
 
         # Additional wait to ensure SSH readiness
-        sleep 60  # Wait 1 minute to ensure SSH service is up
+        sleep 120  # Wait 1 minute to ensure SSH service is up
 
         # Get the server's IP address
         ip_address=$(curl -s -X GET https://api.vultr.com/v2/instances/$instance_id \
@@ -69,17 +69,15 @@ jobs:
 
           # Update and install dependencies
           apt-get update
-          apt-get install -y python3-pip python3-venv
-  
+          apt-get install -y python3-pip python3-venv apt-transport-https ca-certificates curl software-properties-common
+
           # Install Docker
-          apt-get install -y apt-transport-https ca-certificates curl   software-properties-common
-          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
-          add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/  ubuntu $(lsb_release -cs) stable"
+          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+          add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
           apt-get update
           apt-get install -y docker-ce
-          
-          # Start Docker service
           systemctl start docker
+          systemctl enable docker
   
           # Clone the repository
           git clone https://github.com/${{ github.repository }} app
@@ -100,7 +98,7 @@ jobs:
           export DEFAULT_GEMINI_MODEL=${{ secrets.DEFAULT_GEMINI_MODEL }}
           
           # Run the Docker command with cloudflared
-          docker run -d -p ${{ secrets.PORT }}:${{ secrets.PORT }} cloudflare/  cloudflared:latest tunnel --no-autoupdate run --token ${{ secrets.  CLOUDFLARE_TUNNEL_TOKEN }}
+          docker run -d -p ${{ secrets.PORT }}:${{ secrets.PORT }} cloudflare/cloudflared:latest tunnel --no-autoupdate run --token ${{ secrets.CLOUDFLARE_TUNNEL_TOKEN }}
   
           # Run the Flask application with Gunicorn
           gunicorn -w 4 -b localhost:${{ secrets.PORT }} proxy:app
