--- a/.github/workflows/deploy-flask-app.yml
+++ b/.github/workflows/deploy-flask-app.yml
@@ -98,7 +98,7 @@ jobs:
           export DEFAULT_GEMINI_MODEL=${{ secrets.DEFAULT_GEMINI_MODEL }}
           
           # Run the Docker command with cloudflared
-          docker run -d -p ${{ secrets.PORT }}:${{ secrets.PORT }} cloudflare/cloudflared:latest tunnel --no-autoupdate run --token ${{ secrets.CLOUDFLARE_TUNNEL_TOKEN }}
+          docker run -d --network=host cloudflare/cloudflared:latest tunnel --no-autoupdate run --token ${{ secrets.CLOUDFLARE_TUNNEL_TOKEN }}
   
           # Run the Flask application with Gunicorn
           gunicorn -w 4 -b localhost:${{ secrets.PORT }} proxy:app
